# simple-qt-calculator

./: .gitignore  README.md  pyproject.toml  requirements.txt
simple_qt_calculator/: calculator.py  main.py
